fix: dialog looking incorrect on mobile

--- a/src/style.css
+++ b/src/style.css
@@ -21,6 +21,10 @@
   height: 100dvh;
 }
 
+body {
+  height: 100dvh;
+}
+
 h1 {
   font-size: 1.8rem;
   margin-bottom: 1rem;
